# horoji

./: CHANGELOG.md  README.md  pyproject.toml
.github/instructions/: *.instructions.md
.github/workflows/: agent-generate-change.yml  agent-modify-subsystem.yml  agent-validate-change.yml  horoji-ci.yml
.project_memory/authoritative/architecture_manifest/: manifest.yaml
.project_memory/authoritative/contracts/: horoji_cli.yaml  horoji_memory.yaml  horoji_validators.yaml
.project_memory/authoritative/invariants/: memory_no_derived_override.yaml  scheduler_non_blocking.yaml  validators_no_network.yaml
.project_memory/authoritative/ownership/: horoji_cli_ownership.yaml  horoji_memory_ownership.yaml
.project_memory/config/: horoji.config.yaml  invalidation_rules.yaml
.project_memory/derived/callgraphs/: horoji_cli.yaml  horoji_generators.yaml  horoji_invalidation.yaml  horoji_memory.yaml  horoji_validators.yaml
.project_memory/schemas/: callgraph.schema.json  contract.schema.json  dependency.schema.json  impact_set.schema.json  invariant.schema.json  ownership.schema.json  provenance.schema.json
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  TASK_00_HOROJI_BOOTSTRAP.md  TASK_01_AUTHORITATIVE_SURFACES.md  TASK_02_GENERATORS.md  TASK_03_INVALIDATION_ENGINE.md  TASK_04_VALIDATORS.md  TASK_05_CI_ENFORCEMENT.md  TASK_06_AGENT_INTEGRATION.md
tests/horoji/: test_agent_integration.py  test_authoritative_surfaces.py  test_bootstrap.py  test_ci_enforcement.py  test_generators.py  test_invalidation.py  test_validators.py
(+21 files in other folders)
